crates/tau-cli/tests/snapshots/help_snapshots__chat_help.snap
---
source: crates/tau-cli/tests/help_snapshots.rs
expression: s
---
Open a REPL chat session with an agent

Usage: tau chat [OPTIONS] <AGENT_ID>

Arguments:
  <AGENT_ID>
          Identifier of the agent to chat with

Options:
      --max-turns <MAX_TURNS>
          Override RunOptions::max_turns

      --dry-run
          Validate setup without entering the REPL

      --no-install
          Skip auto-install of missing requires.tools dependencies. If anything would need fetching, exit 2 with copy-pasteable `tau install <url>` hints instead

      --no-stream
          Disable streaming output. Renders the full response after each turn instead of typewriter-style as it arrives

      --ephemeral
          Don't persist this session to disk; in-memory only

  -v, --verbose...
          Verbosity level. Repeat for more (-v: DEBUG, -vv: TRACE)

  -q, --quiet
          Suppress non-error output (sets tracing to WARN)

      --debug
          Show full error chain + DEBUG-level tracing on failures

      --color <COLOR>
          Color mode for terminal output

          Possible values:
          - always: Always emit ANSI color codes
          - auto:   Auto-detect based on terminal capabilities
          - never:  Never emit color codes
          
          [default: auto]

      --json
          Emit structured JSON output instead of human-readable. Only supported on `install`, `list`, `run`, `init`

      --record-protocol <PATH>
          Mirror every plugin protocol frame to a JSONL file at this path.
          
          Useful for debugging plugin behavior and replaying via `tau plugin protocol decode <path>`. The recording is best-effort per spec §7.8: write/open failures are logged but never abort the invocation.

  -h, --help
          Print help (see a summary with '-h')
