crates/tau-cli/tests/snapshots/help_snapshots__list_help.snap
---
source: crates/tau-cli/tests/help_snapshots.rs
expression: s
---
List installed packages or available agents

Usage: tau list [OPTIONS] [RESOURCE]

Arguments:
  [RESOURCE]
          What to list. Defaults to `packages`

          Possible values:
          - packages: List installed packages
          - agents:   List available agents
          
          [default: packages]

Options:
      --global
          Restrict the listing to globally-installed entries. (Ignored when `resource` is `agents`; agents are always project-scoped.)

      --all
          List both project and global entries side-by-side. (Ignored when `resource` is `agents`; agents are always project-scoped.)

      --capabilities
          When listing agents, also print the effective capability set (allow + deny per agent, computed against the package manifest). Ignored when `resource` is `packages`

  -v, --verbose...
          Verbosity level. Repeat for more (-v: DEBUG, -vv: TRACE)

  -q, --quiet
          Suppress non-error output (sets tracing to WARN)

      --debug
          Show full error chain + DEBUG-level tracing on failures

      --color <COLOR>
          Color mode for terminal output

          Possible values:
          - always: Always emit ANSI color codes
          - auto:   Auto-detect based on terminal capabilities
          - never:  Never emit color codes
          
          [default: auto]

      --json
          Emit structured JSON output instead of human-readable. Only supported on `install`, `list`, `run`, `init`

      --record-protocol <PATH>
          Mirror every plugin protocol frame to a JSONL file at this path.
          
          Useful for debugging plugin behavior and replaying via `tau plugin protocol decode <path>`. The recording is best-effort per spec §7.8: write/open failures are logged but never abort the invocation.

  -h, --help
          Print help (see a summary with '-h')
